// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Building Blocks Generate with just ID and xml view without macros namespace generate chart building block: generate-chart-with-id-no-macros-ns 1`] = `
Object {
  "generate-chart-with-id-no-macros-ns/webapp/ext/main/Main.view.xml": Object {
    "contents": "<mvc:View xmlns:core=\\"sap.ui.core\\" xmlns:mvc=\\"sap.ui.core.mvc\\" xmlns=\\"sap.m\\" xmlns:html=\\"http://www.w3.org/1999/xhtml\\" controllerName=\\"com.test.myApp.ext.main.Main\\" xmlns:macros=\\"sap.fe.macros\\">
    <Page title=\\"Main\\">
        <content>
            <macros:Chart id=\\"testChart\\"/>
        </content>
    </Page>
</mvc:View>",
    "state": "modified",
  },
  "generate-chart-with-id-no-macros-ns/webapp/manifest.json": Object {
    "contents": "{
  \\"sap.app\\": {
    \\"id\\": \\"my.test.App\\"
  },
  \\"sap.ui5\\": {
    \\"dependencies\\": {
      \\"minUI5Version\\": \\"1.127.0\\",
      \\"libs\\": {
        \\"sap.fe.core\\": {},
        \\"sap.fe.macros\\": {}
      }
    }
  },
  \\"default\\": {
    \\"sap.app\\": {
      \\"id\\": \\"my.test.App\\"
    },
    \\"sap.ui5\\": {
      \\"dependencies\\": {
        \\"minUI5Version\\": \\"1.127.0\\",
        \\"libs\\": {
          \\"sap.fe.core\\": {}
        }
      }
    }
  }
}
",
    "state": "modified",
  },
}
`;

exports[`Building Blocks Generate with just ID and xml view without macros namespace generate field building block: generate-field-with-id-no-macros-ns 1`] = `
Object {
  "generate-field-with-id-no-macros-ns/webapp/ext/main/Main.view.xml": Object {
    "contents": "<mvc:View xmlns:core=\\"sap.ui.core\\" xmlns:mvc=\\"sap.ui.core.mvc\\" xmlns=\\"sap.m\\" xmlns:html=\\"http://www.w3.org/1999/xhtml\\" controllerName=\\"com.test.myApp.ext.main.Main\\" xmlns:macros=\\"sap.fe.macros\\">
    <Page title=\\"Main\\">
        <content>
            <macros:Field id=\\"testField\\"/>
        </content>
    </Page>
</mvc:View>",
    "state": "modified",
  },
  "generate-field-with-id-no-macros-ns/webapp/manifest.json": Object {
    "contents": "{
  \\"sap.app\\": {
    \\"id\\": \\"my.test.App\\"
  },
  \\"sap.ui5\\": {
    \\"dependencies\\": {
      \\"minUI5Version\\": \\"1.127.0\\",
      \\"libs\\": {
        \\"sap.fe.core\\": {},
        \\"sap.fe.macros\\": {}
      }
    }
  },
  \\"default\\": {
    \\"sap.app\\": {
      \\"id\\": \\"my.test.App\\"
    },
    \\"sap.ui5\\": {
      \\"dependencies\\": {
        \\"minUI5Version\\": \\"1.127.0\\",
        \\"libs\\": {
          \\"sap.fe.core\\": {}
        }
      }
    }
  }
}
",
    "state": "modified",
  },
}
`;

exports[`Building Blocks Generate with just ID and xml view without macros namespace generate filter-bar building block: generate-filter-bar-with-id-no-macros-ns 1`] = `
Object {
  "generate-filter-bar-with-id-no-macros-ns/webapp/ext/main/Main.view.xml": Object {
    "contents": "<mvc:View xmlns:core=\\"sap.ui.core\\" xmlns:mvc=\\"sap.ui.core.mvc\\" xmlns=\\"sap.m\\" xmlns:html=\\"http://www.w3.org/1999/xhtml\\" controllerName=\\"com.test.myApp.ext.main.Main\\" xmlns:macros=\\"sap.fe.macros\\">
    <Page title=\\"Main\\">
        <content>
            <macros:FilterBar id=\\"testFilterBar\\"/>
        </content>
    </Page>
</mvc:View>",
    "state": "modified",
  },
  "generate-filter-bar-with-id-no-macros-ns/webapp/manifest.json": Object {
    "contents": "{
  \\"sap.app\\": {
    \\"id\\": \\"my.test.App\\"
  },
  \\"sap.ui5\\": {
    \\"dependencies\\": {
      \\"minUI5Version\\": \\"1.127.0\\",
      \\"libs\\": {
        \\"sap.fe.core\\": {},
        \\"sap.fe.macros\\": {}
      }
    }
  },
  \\"default\\": {
    \\"sap.app\\": {
      \\"id\\": \\"my.test.App\\"
    },
    \\"sap.ui5\\": {
      \\"dependencies\\": {
        \\"minUI5Version\\": \\"1.127.0\\",
        \\"libs\\": {
          \\"sap.fe.core\\": {}
        }
      }
    }
  }
}
",
    "state": "modified",
  },
}
`;

exports[`Building Blocks Generate with just ID and xml view without macros namespace generate table building block: generate-table-with-id-no-macros-ns 1`] = `
Object {
  "generate-table-with-id-no-macros-ns/webapp/ext/main/Main.view.xml": Object {
    "contents": "<mvc:View xmlns:core=\\"sap.ui.core\\" xmlns:mvc=\\"sap.ui.core.mvc\\" xmlns=\\"sap.m\\" xmlns:html=\\"http://www.w3.org/1999/xhtml\\" controllerName=\\"com.test.myApp.ext.main.Main\\" xmlns:macros=\\"sap.fe.macros\\">
    <Page title=\\"Main\\">
        <content>
            <macros:Table id=\\"testTable\\"/>
        </content>
    </Page>
</mvc:View>",
    "state": "modified",
  },
  "generate-table-with-id-no-macros-ns/webapp/manifest.json": Object {
    "contents": "{
  \\"sap.app\\": {
    \\"id\\": \\"my.test.App\\"
  },
  \\"sap.ui5\\": {
    \\"dependencies\\": {
      \\"minUI5Version\\": \\"1.127.0\\",
      \\"libs\\": {
        \\"sap.fe.core\\": {},
        \\"sap.fe.macros\\": {}
      }
    }
  },
  \\"default\\": {
    \\"sap.app\\": {
      \\"id\\": \\"my.test.App\\"
    },
    \\"sap.ui5\\": {
      \\"dependencies\\": {
        \\"minUI5Version\\": \\"1.127.0\\",
        \\"libs\\": {
          \\"sap.fe.core\\": {}
        }
      }
    }
  }
}
",
    "state": "modified",
  },
}
`;

exports[`Building Blocks Generate with just ID generate chart building block: generate-chart-with-id 1`] = `
Object {
  "generate-chart-with-id/webapp/ext/main/Main.view.xml": Object {
    "contents": "<mvc:View xmlns:core=\\"sap.ui.core\\" xmlns:mvc=\\"sap.ui.core.mvc\\" xmlns=\\"sap.m\\" xmlns:html=\\"http://www.w3.org/1999/xhtml\\" controllerName=\\"com.test.myApp.ext.main.Main\\" xmlns:macros=\\"sap.fe.macros\\">
    <Page title=\\"Main\\">
        <content>
            <macros:Chart id=\\"testChart\\"/>
        </content>
    </Page>
</mvc:View>",
    "state": "modified",
  },
  "generate-chart-with-id/webapp/manifest.json": Object {
    "contents": "{
  \\"sap.app\\": {
    \\"id\\": \\"my.test.App\\"
  },
  \\"sap.ui5\\": {
    \\"dependencies\\": {
      \\"minUI5Version\\": \\"1.127.0\\",
      \\"libs\\": {
        \\"sap.fe.core\\": {},
        \\"sap.fe.macros\\": {}
      }
    }
  },
  \\"default\\": {
    \\"sap.app\\": {
      \\"id\\": \\"my.test.App\\"
    },
    \\"sap.ui5\\": {
      \\"dependencies\\": {
        \\"minUI5Version\\": \\"1.127.0\\",
        \\"libs\\": {
          \\"sap.fe.core\\": {}
        }
      }
    }
  }
}
",
    "state": "modified",
  },
}
`;

exports[`Building Blocks Generate with just ID generate field building block: generate-field-with-id 1`] = `
Object {
  "generate-field-with-id/webapp/ext/main/Main.view.xml": Object {
    "contents": "<mvc:View xmlns:core=\\"sap.ui.core\\" xmlns:mvc=\\"sap.ui.core.mvc\\" xmlns=\\"sap.m\\" xmlns:html=\\"http://www.w3.org/1999/xhtml\\" controllerName=\\"com.test.myApp.ext.main.Main\\" xmlns:macros=\\"sap.fe.macros\\">
    <Page title=\\"Main\\">
        <content>
            <macros:Field id=\\"testField\\"/>
        </content>
    </Page>
</mvc:View>",
    "state": "modified",
  },
  "generate-field-with-id/webapp/manifest.json": Object {
    "contents": "{
  \\"sap.app\\": {
    \\"id\\": \\"my.test.App\\"
  },
  \\"sap.ui5\\": {
    \\"dependencies\\": {
      \\"minUI5Version\\": \\"1.127.0\\",
      \\"libs\\": {
        \\"sap.fe.core\\": {},
        \\"sap.fe.macros\\": {}
      }
    }
  },
  \\"default\\": {
    \\"sap.app\\": {
      \\"id\\": \\"my.test.App\\"
    },
    \\"sap.ui5\\": {
      \\"dependencies\\": {
        \\"minUI5Version\\": \\"1.127.0\\",
        \\"libs\\": {
          \\"sap.fe.core\\": {}
        }
      }
    }
  }
}
",
    "state": "modified",
  },
}
`;

exports[`Building Blocks Generate with just ID generate filter-bar building block: generate-filter-bar-with-id 1`] = `
Object {
  "generate-filter-bar-with-id/webapp/ext/main/Main.view.xml": Object {
    "contents": "<mvc:View xmlns:core=\\"sap.ui.core\\" xmlns:mvc=\\"sap.ui.core.mvc\\" xmlns=\\"sap.m\\" xmlns:html=\\"http://www.w3.org/1999/xhtml\\" controllerName=\\"com.test.myApp.ext.main.Main\\" xmlns:macros=\\"sap.fe.macros\\">
    <Page title=\\"Main\\">
        <content>
            <macros:FilterBar id=\\"testFilterBar\\"/>
        </content>
    </Page>
</mvc:View>",
    "state": "modified",
  },
  "generate-filter-bar-with-id/webapp/manifest.json": Object {
    "contents": "{
  \\"sap.app\\": {
    \\"id\\": \\"my.test.App\\"
  },
  \\"sap.ui5\\": {
    \\"dependencies\\": {
      \\"minUI5Version\\": \\"1.127.0\\",
      \\"libs\\": {
        \\"sap.fe.core\\": {},
        \\"sap.fe.macros\\": {}
      }
    }
  },
  \\"default\\": {
    \\"sap.app\\": {
      \\"id\\": \\"my.test.App\\"
    },
    \\"sap.ui5\\": {
      \\"dependencies\\": {
        \\"minUI5Version\\": \\"1.127.0\\",
        \\"libs\\": {
          \\"sap.fe.core\\": {}
        }
      }
    }
  }
}
",
    "state": "modified",
  },
}
`;

exports[`Building Blocks Generate with just ID generate table building block: generate-table-with-id 1`] = `
Object {
  "generate-table-with-id/webapp/ext/main/Main.view.xml": Object {
    "contents": "<mvc:View xmlns:core=\\"sap.ui.core\\" xmlns:mvc=\\"sap.ui.core.mvc\\" xmlns=\\"sap.m\\" xmlns:html=\\"http://www.w3.org/1999/xhtml\\" controllerName=\\"com.test.myApp.ext.main.Main\\" xmlns:macros=\\"sap.fe.macros\\">
    <Page title=\\"Main\\">
        <content>
            <macros:Table id=\\"testTable\\"/>
        </content>
    </Page>
</mvc:View>",
    "state": "modified",
  },
  "generate-table-with-id/webapp/manifest.json": Object {
    "contents": "{
  \\"sap.app\\": {
    \\"id\\": \\"my.test.App\\"
  },
  \\"sap.ui5\\": {
    \\"dependencies\\": {
      \\"minUI5Version\\": \\"1.127.0\\",
      \\"libs\\": {
        \\"sap.fe.core\\": {},
        \\"sap.fe.macros\\": {}
      }
    }
  },
  \\"default\\": {
    \\"sap.app\\": {
      \\"id\\": \\"my.test.App\\"
    },
    \\"sap.ui5\\": {
      \\"dependencies\\": {
        \\"minUI5Version\\": \\"1.127.0\\",
        \\"libs\\": {
          \\"sap.fe.core\\": {}
        }
      }
    }
  }
}
",
    "state": "modified",
  },
}
`;

exports[`Building Blocks Generate with optional parameters Generate Chart from object metaPath. Absolute path without entity 1`] = `
"<macros:Chart
    id=\\"REPLACE_WITH_BUILDING_BLOCK_ID\\"
    metaPath=\\"testQualifier\\"
    contextPath=\\"/REPLACE_WITH_ENTITY\\"
/>"
`;

exports[`Building Blocks Generate with optional parameters Generate Chart from object metaPath. Absolute path without qualifier 1`] = `
"<macros:Chart
    id=\\"REPLACE_WITH_BUILDING_BLOCK_ID\\"
    metaPath=\\"REPLACE_WITH_A_QUALIFIER\\"
    contextPath=\\"/testEntitySet\\"
/>"
`;

exports[`Building Blocks Generate with optional parameters Generate Chart from object metaPath. Complex absolute path 1`] = `
"<macros:Chart
    id=\\"REPLACE_WITH_BUILDING_BLOCK_ID\\"
    metaPath=\\"@com.sap.vocabularies.UI.v1.Chart#chartMacro5\\"
    contextPath=\\"/SessionMetrics\\"
/>"
`;

exports[`Building Blocks Generate with optional parameters Generate Chart from object metaPath. Complex relative path 1`] = `
"<macros:Chart
    id=\\"REPLACE_WITH_BUILDING_BLOCK_ID\\"
    metaPath=\\"@com.sap.vocabularies.UI.v1.Chart#chartMacro4\\"
    contextPath=\\"/Sessions/Speed\\"
/>"
`;

exports[`Building Blocks Generate with optional parameters Generate Chart from object metaPath. Relative path without entity 1`] = `
"<macros:Chart
    id=\\"REPLACE_WITH_BUILDING_BLOCK_ID\\"
    metaPath=\\"testQualifier\\"
    contextPath=\\"/REPLACE_WITH_ENTITY\\"
/>"
`;

exports[`Building Blocks Generate with optional parameters Generate Chart from object metaPath. Relative path without qualifier 1`] = `
"<macros:Chart
    id=\\"REPLACE_WITH_BUILDING_BLOCK_ID\\"
    metaPath=\\"REPLACE_WITH_A_QUALIFIER\\"
    contextPath=\\"/testEntitySet\\"
/>"
`;

exports[`Building Blocks Generate with optional parameters Generate Chart from object metaPath. Simple absolute path 1`] = `
"<macros:Chart
    id=\\"REPLACE_WITH_BUILDING_BLOCK_ID\\"
    metaPath=\\"testQualifier\\"
    contextPath=\\"/testEntitySet\\"
/>"
`;

exports[`Building Blocks Generate with optional parameters Generate Chart from object metaPath. Simple relative path 1`] = `
"<macros:Chart
    id=\\"REPLACE_WITH_BUILDING_BLOCK_ID\\"
    metaPath=\\"testQualifier\\"
    contextPath=\\"/testEntitySet\\"
/>"
`;

exports[`Building Blocks Generate with optional parameters generate chart building block with metaPath as object. Relative: generate-chart-with-optional-params 1`] = `
Object {
  "generate-chart-with-optional-params/webapp/ext/main/Main.view.xml": Object {
    "contents": "<mvc:View xmlns:core=\\"sap.ui.core\\" xmlns:mvc=\\"sap.ui.core.mvc\\" xmlns=\\"sap.m\\" xmlns:html=\\"http://www.w3.org/1999/xhtml\\" controllerName=\\"com.test.myApp.ext.main.Main\\" xmlns:macros=\\"sap.fe.macros\\">
    <Page title=\\"Main\\">
        <content>
            <macros:Chart id=\\"testChart\\" metaPath=\\"testQualifier\\" contextPath=\\"/testEntitySet\\" filterBar=\\"testFilterBar\\" personalization=\\"testPersonalization\\" selectionMode=\\"MULTIPLE\\" selectionChange=\\"testOnSelectionChange\\"/>
        </content>
    </Page>
</mvc:View>",
    "state": "modified",
  },
  "generate-chart-with-optional-params/webapp/manifest.json": Object {
    "contents": "{\\"sap.app\\":{\\"id\\":\\"my.test.App\\"},\\"sap.ui5\\":{\\"dependencies\\":{\\"minUI5Version\\":\\"1.127.0\\",\\"libs\\":{\\"sap.fe.core\\":{}}}},\\"default\\":{\\"sap.app\\":{\\"id\\":\\"my.test.App\\"},\\"sap.ui5\\":{\\"dependencies\\":{\\"minUI5Version\\":\\"1.127.0\\",\\"libs\\":{\\"sap.fe.core\\":{}}}}}}",
    "state": "modified",
  },
}
`;

exports[`Building Blocks Generate with optional parameters generate chart building block with metaPath as object: generate-chart-with-optional-params 1`] = `
Object {
  "generate-chart-with-optional-params/webapp/ext/main/Main.view.xml": Object {
    "contents": "<mvc:View xmlns:core=\\"sap.ui.core\\" xmlns:mvc=\\"sap.ui.core.mvc\\" xmlns=\\"sap.m\\" xmlns:html=\\"http://www.w3.org/1999/xhtml\\" controllerName=\\"com.test.myApp.ext.main.Main\\" xmlns:macros=\\"sap.fe.macros\\">
    <Page title=\\"Main\\">
        <content>
            <macros:Chart id=\\"testChart\\" metaPath=\\"testQualifier\\" contextPath=\\"/testEntitySet\\" filterBar=\\"testFilterBar\\" personalization=\\"testPersonalization\\" selectionMode=\\"MULTIPLE\\" selectionChange=\\"testOnSelectionChange\\"/>
        </content>
    </Page>
</mvc:View>",
    "state": "modified",
  },
  "generate-chart-with-optional-params/webapp/manifest.json": Object {
    "contents": "{
  \\"sap.app\\": {
    \\"id\\": \\"my.test.App\\"
  },
  \\"sap.ui5\\": {
    \\"dependencies\\": {
      \\"minUI5Version\\": \\"1.127.0\\",
      \\"libs\\": {
        \\"sap.fe.core\\": {},
        \\"sap.fe.macros\\": {}
      }
    }
  },
  \\"default\\": {
    \\"sap.app\\": {
      \\"id\\": \\"my.test.App\\"
    },
    \\"sap.ui5\\": {
      \\"dependencies\\": {
        \\"minUI5Version\\": \\"1.127.0\\",
        \\"libs\\": {
          \\"sap.fe.core\\": {}
        }
      }
    }
  }
}
",
    "state": "modified",
  },
}
`;

exports[`Building Blocks Generate with optional parameters generate chart building block: generate-chart-with-optional-params 1`] = `
Object {
  "generate-chart-with-optional-params/webapp/ext/main/Main.view.xml": Object {
    "contents": "<mvc:View xmlns:core=\\"sap.ui.core\\" xmlns:mvc=\\"sap.ui.core.mvc\\" xmlns=\\"sap.m\\" xmlns:html=\\"http://www.w3.org/1999/xhtml\\" controllerName=\\"com.test.myApp.ext.main.Main\\" xmlns:macros=\\"sap.fe.macros\\">
    <Page title=\\"Main\\">
        <content>
            <macros:Chart id=\\"testChart\\" metaPath=\\"testMetaPath\\" contextPath=\\"testContextPath\\" filterBar=\\"testFilterBar\\" personalization=\\"testPersonalization\\" selectionMode=\\"MULTIPLE\\" selectionChange=\\"testOnSelectionChange\\"/>
        </content>
    </Page>
</mvc:View>",
    "state": "modified",
  },
  "generate-chart-with-optional-params/webapp/manifest.json": Object {
    "contents": "{
  \\"sap.app\\": {
    \\"id\\": \\"my.test.App\\"
  },
  \\"sap.ui5\\": {
    \\"dependencies\\": {
      \\"minUI5Version\\": \\"1.127.0\\",
      \\"libs\\": {
        \\"sap.fe.core\\": {},
        \\"sap.fe.macros\\": {}
      }
    }
  },
  \\"default\\": {
    \\"sap.app\\": {
      \\"id\\": \\"my.test.App\\"
    },
    \\"sap.ui5\\": {
      \\"dependencies\\": {
        \\"minUI5Version\\": \\"1.127.0\\",
        \\"libs\\": {
          \\"sap.fe.core\\": {}
        }
      }
    }
  }
}
",
    "state": "modified",
  },
}
`;

exports[`Building Blocks Generate with optional parameters generate field building block with metaPath as object: generate-field-with-optional-params 1`] = `
Object {
  "generate-field-with-optional-params/webapp/ext/main/Main.view.xml": Object {
    "contents": "<mvc:View xmlns:core=\\"sap.ui.core\\" xmlns:mvc=\\"sap.ui.core.mvc\\" xmlns=\\"sap.m\\" xmlns:html=\\"http://www.w3.org/1999/xhtml\\" controllerName=\\"com.test.myApp.ext.main.Main\\" xmlns:macros=\\"sap.fe.macros\\">
    <Page title=\\"Main\\">
        <content>
            <macros:Field id=\\"testField\\" metaPath=\\"/testEntitySet/testQualifier\\" formatOptions=\\"{'displayMode':'Value'}\\" readOnly=\\"true\\" semanticObject=\\"testSemanticObject\\"/>
        </content>
    </Page>
</mvc:View>",
    "state": "modified",
  },
  "generate-field-with-optional-params/webapp/manifest.json": Object {
    "contents": "{
  \\"sap.app\\": {
    \\"id\\": \\"my.test.App\\"
  },
  \\"sap.ui5\\": {
    \\"dependencies\\": {
      \\"minUI5Version\\": \\"1.127.0\\",
      \\"libs\\": {
        \\"sap.fe.core\\": {},
        \\"sap.fe.macros\\": {}
      }
    }
  },
  \\"default\\": {
    \\"sap.app\\": {
      \\"id\\": \\"my.test.App\\"
    },
    \\"sap.ui5\\": {
      \\"dependencies\\": {
        \\"minUI5Version\\": \\"1.127.0\\",
        \\"libs\\": {
          \\"sap.fe.core\\": {}
        }
      }
    }
  }
}
",
    "state": "modified",
  },
}
`;

exports[`Building Blocks Generate with optional parameters generate field building block: generate-field-with-optional-params 1`] = `
Object {
  "generate-field-with-optional-params/webapp/ext/main/Main.view.xml": Object {
    "contents": "<mvc:View xmlns:core=\\"sap.ui.core\\" xmlns:mvc=\\"sap.ui.core.mvc\\" xmlns=\\"sap.m\\" xmlns:html=\\"http://www.w3.org/1999/xhtml\\" controllerName=\\"com.test.myApp.ext.main.Main\\" xmlns:macros=\\"sap.fe.macros\\">
    <Page title=\\"Main\\">
        <content>
            <macros:Field id=\\"testField\\" metaPath=\\"testMetaPath\\" contextPath=\\"testContextPath\\" formatOptions=\\"{'displayMode':'Value'}\\" readOnly=\\"true\\" semanticObject=\\"testSemanticObject\\"/>
        </content>
    </Page>
</mvc:View>",
    "state": "modified",
  },
  "generate-field-with-optional-params/webapp/manifest.json": Object {
    "contents": "{
  \\"sap.app\\": {
    \\"id\\": \\"my.test.App\\"
  },
  \\"sap.ui5\\": {
    \\"dependencies\\": {
      \\"minUI5Version\\": \\"1.127.0\\",
      \\"libs\\": {
        \\"sap.fe.core\\": {},
        \\"sap.fe.macros\\": {}
      }
    }
  },
  \\"default\\": {
    \\"sap.app\\": {
      \\"id\\": \\"my.test.App\\"
    },
    \\"sap.ui5\\": {
      \\"dependencies\\": {
        \\"minUI5Version\\": \\"1.127.0\\",
        \\"libs\\": {
          \\"sap.fe.core\\": {}
        }
      }
    }
  }
}
",
    "state": "modified",
  },
}
`;

exports[`Building Blocks Generate with optional parameters generate filter-bar building block with metaPath as object. Relative: generate-filter-bar-with-optional-params 1`] = `
Object {
  "generate-filter-bar-with-optional-params/webapp/ext/main/Main.view.xml": Object {
    "contents": "<mvc:View xmlns:core=\\"sap.ui.core\\" xmlns:mvc=\\"sap.ui.core.mvc\\" xmlns=\\"sap.m\\" xmlns:html=\\"http://www.w3.org/1999/xhtml\\" controllerName=\\"com.test.myApp.ext.main.Main\\" xmlns:macros=\\"sap.fe.macros\\">
    <Page title=\\"Main\\">
        <content>
            <macros:FilterBar id=\\"testFilterBar\\" metaPath=\\"testQualifier\\" search=\\"testOnSearch\\" filterChanged=\\"testOnFilterChanged\\"/>
        </content>
    </Page>
</mvc:View>",
    "state": "modified",
  },
  "generate-filter-bar-with-optional-params/webapp/manifest.json": Object {
    "contents": "{\\"sap.app\\":{\\"id\\":\\"my.test.App\\"},\\"sap.ui5\\":{\\"dependencies\\":{\\"minUI5Version\\":\\"1.127.0\\",\\"libs\\":{\\"sap.fe.core\\":{}}}},\\"default\\":{\\"sap.app\\":{\\"id\\":\\"my.test.App\\"},\\"sap.ui5\\":{\\"dependencies\\":{\\"minUI5Version\\":\\"1.127.0\\",\\"libs\\":{\\"sap.fe.core\\":{}}}}}}",
    "state": "modified",
  },
}
`;

exports[`Building Blocks Generate with optional parameters generate filter-bar building block with metaPath as object: generate-filter-bar-with-optional-params 1`] = `
Object {
  "generate-filter-bar-with-optional-params/webapp/ext/main/Main.view.xml": Object {
    "contents": "<mvc:View xmlns:core=\\"sap.ui.core\\" xmlns:mvc=\\"sap.ui.core.mvc\\" xmlns=\\"sap.m\\" xmlns:html=\\"http://www.w3.org/1999/xhtml\\" controllerName=\\"com.test.myApp.ext.main.Main\\" xmlns:macros=\\"sap.fe.macros\\">
    <Page title=\\"Main\\">
        <content>
            <macros:FilterBar id=\\"testFilterBar\\" metaPath=\\"/testEntitySet/testQualifier\\" search=\\"testOnSearch\\" filterChanged=\\"testOnFilterChanged\\"/>
        </content>
    </Page>
</mvc:View>",
    "state": "modified",
  },
  "generate-filter-bar-with-optional-params/webapp/manifest.json": Object {
    "contents": "{
  \\"sap.app\\": {
    \\"id\\": \\"my.test.App\\"
  },
  \\"sap.ui5\\": {
    \\"dependencies\\": {
      \\"minUI5Version\\": \\"1.127.0\\",
      \\"libs\\": {
        \\"sap.fe.core\\": {},
        \\"sap.fe.macros\\": {}
      }
    }
  },
  \\"default\\": {
    \\"sap.app\\": {
      \\"id\\": \\"my.test.App\\"
    },
    \\"sap.ui5\\": {
      \\"dependencies\\": {
        \\"minUI5Version\\": \\"1.127.0\\",
        \\"libs\\": {
          \\"sap.fe.core\\": {}
        }
      }
    }
  }
}
",
    "state": "modified",
  },
}
`;

exports[`Building Blocks Generate with optional parameters generate filter-bar building block: generate-filter-bar-with-optional-params 1`] = `
Object {
  "generate-filter-bar-with-optional-params/webapp/ext/main/Main.view.xml": Object {
    "contents": "<mvc:View xmlns:core=\\"sap.ui.core\\" xmlns:mvc=\\"sap.ui.core.mvc\\" xmlns=\\"sap.m\\" xmlns:html=\\"http://www.w3.org/1999/xhtml\\" controllerName=\\"com.test.myApp.ext.main.Main\\" xmlns:macros=\\"sap.fe.macros\\">
    <Page title=\\"Main\\">
        <content>
            <macros:FilterBar id=\\"testFilterBar\\" metaPath=\\"testMetaPath\\" contextPath=\\"testContextPath\\" search=\\"testOnSearch\\" filterChanged=\\"testOnFilterChanged\\"/>
        </content>
    </Page>
</mvc:View>",
    "state": "modified",
  },
  "generate-filter-bar-with-optional-params/webapp/manifest.json": Object {
    "contents": "{
  \\"sap.app\\": {
    \\"id\\": \\"my.test.App\\"
  },
  \\"sap.ui5\\": {
    \\"dependencies\\": {
      \\"minUI5Version\\": \\"1.127.0\\",
      \\"libs\\": {
        \\"sap.fe.core\\": {},
        \\"sap.fe.macros\\": {}
      }
    }
  },
  \\"default\\": {
    \\"sap.app\\": {
      \\"id\\": \\"my.test.App\\"
    },
    \\"sap.ui5\\": {
      \\"dependencies\\": {
        \\"minUI5Version\\": \\"1.127.0\\",
        \\"libs\\": {
          \\"sap.fe.core\\": {}
        }
      }
    }
  }
}
",
    "state": "modified",
  },
}
`;

exports[`Building Blocks Generate with optional parameters generate table building block with metaPath as object: generate-table-with-optional-params 1`] = `
Object {
  "generate-table-with-optional-params/webapp/ext/main/Main.view.xml": Object {
    "contents": "<mvc:View xmlns:core=\\"sap.ui.core\\" xmlns:mvc=\\"sap.ui.core.mvc\\" xmlns=\\"sap.m\\" xmlns:html=\\"http://www.w3.org/1999/xhtml\\" controllerName=\\"com.test.myApp.ext.main.Main\\" xmlns:macros=\\"sap.fe.macros\\">
    <Page title=\\"Main\\">
        <content>
            <macros:Table id=\\"testTable\\" metaPath=\\"/testEntitySet/testQualifier\\" busy=\\"true\\" enableAutoColumnWidth=\\"true\\" enableExport=\\"true\\" enableFullScreen=\\"true\\" enablePaste=\\"true\\" filterBar=\\"testFilterBar\\" header=\\"Test Header\\" headerVisible=\\"true\\" isSearchable=\\"true\\" personalization=\\"Column\\" readOnly=\\"true\\" type=\\"ResponsiveTable\\" variantManagement=\\"None\\"/>
        </content>
    </Page>
</mvc:View>",
    "state": "modified",
  },
  "generate-table-with-optional-params/webapp/manifest.json": Object {
    "contents": "{
  \\"sap.app\\": {
    \\"id\\": \\"my.test.App\\"
  },
  \\"sap.ui5\\": {
    \\"dependencies\\": {
      \\"minUI5Version\\": \\"1.127.0\\",
      \\"libs\\": {
        \\"sap.fe.core\\": {},
        \\"sap.fe.macros\\": {}
      }
    }
  },
  \\"default\\": {
    \\"sap.app\\": {
      \\"id\\": \\"my.test.App\\"
    },
    \\"sap.ui5\\": {
      \\"dependencies\\": {
        \\"minUI5Version\\": \\"1.127.0\\",
        \\"libs\\": {
          \\"sap.fe.core\\": {}
        }
      }
    }
  }
}
",
    "state": "modified",
  },
}
`;

exports[`Building Blocks Generate with optional parameters generate table building block: generate-table-with-optional-params 1`] = `
Object {
  "generate-table-with-optional-params/webapp/ext/main/Main.view.xml": Object {
    "contents": "<mvc:View xmlns:core=\\"sap.ui.core\\" xmlns:mvc=\\"sap.ui.core.mvc\\" xmlns=\\"sap.m\\" xmlns:html=\\"http://www.w3.org/1999/xhtml\\" controllerName=\\"com.test.myApp.ext.main.Main\\" xmlns:macros=\\"sap.fe.macros\\">
    <Page title=\\"Main\\">
        <content>
            <macros:Table id=\\"testTable\\" metaPath=\\"testMetaPath\\" contextPath=\\"testContextPath\\" busy=\\"true\\" enableAutoColumnWidth=\\"true\\" enableExport=\\"true\\" enableFullScreen=\\"true\\" enablePaste=\\"true\\" filterBar=\\"testFilterBar\\" header=\\"Test Header\\" headerVisible=\\"true\\" isSearchable=\\"true\\" personalization=\\"Column\\" readOnly=\\"true\\" type=\\"ResponsiveTable\\" variantManagement=\\"None\\"/>
        </content>
    </Page>
</mvc:View>",
    "state": "modified",
  },
  "generate-table-with-optional-params/webapp/manifest.json": Object {
    "contents": "{
  \\"sap.app\\": {
    \\"id\\": \\"my.test.App\\"
  },
  \\"sap.ui5\\": {
    \\"dependencies\\": {
      \\"minUI5Version\\": \\"1.127.0\\",
      \\"libs\\": {
        \\"sap.fe.core\\": {},
        \\"sap.fe.macros\\": {}
      }
    }
  },
  \\"default\\": {
    \\"sap.app\\": {
      \\"id\\": \\"my.test.App\\"
    },
    \\"sap.ui5\\": {
      \\"dependencies\\": {
        \\"minUI5Version\\": \\"1.127.0\\",
        \\"libs\\": {
          \\"sap.fe.core\\": {}
        }
      }
    }
  }
}
",
    "state": "modified",
  },
}
`;

exports[`Building Blocks Generate with optional parameters getSerializedFileContent for chart building block 1`] = `
"<macros:Chart
    id=\\"testChart\\"
    metaPath=\\"testMetaPath\\"
    contextPath=\\"testContextPath\\"
    filterBar=\\"testFilterBar\\"
    personalization=\\"testPersonalization\\"
    selectionMode=\\"MULTIPLE\\"
    selectionChange=\\"testOnSelectionChange\\"
/>"
`;

exports[`Building Blocks Generate with optional parameters getSerializedFileContent for chart building block 2`] = `
"<macros:Chart
    id=\\"testChart\\"
    metaPath=\\"/REPLACE_WITH_A_QUALIFIER\\"
    contextPath=\\"REPLACE_WITH_ENTITY\\"
/>"
`;

exports[`Building Blocks Generate with optional parameters getSerializedFileContent for field building block 1`] = `
"<macros:Field
    id=\\"testField\\"
    metaPath=\\"testMetaPath\\"
    contextPath=\\"testContextPath\\"
    formatOptions=\\"{'displayMode':'Value'}\\"
    readOnly=\\"true\\"
    semanticObject=\\"testSemanticObject\\"
/>"
`;

exports[`Building Blocks Generate with optional parameters getSerializedFileContent for field building block 2`] = `
"<macros:Field
    id=\\"testField\\"
    metaPath=\\"/REPLACE_WITH_ENTITY/REPLACE_WITH_A_QUALIFIER\\"
/>"
`;

exports[`Building Blocks Generate with optional parameters getSerializedFileContent for filter-bar building block 1`] = `
"<macros:FilterBar
    id=\\"testFilterBar\\"
    metaPath=\\"testMetaPath\\"
    contextPath=\\"testContextPath\\"
    search=\\"testOnSearch\\"
    filterChanged=\\"testOnFilterChanged\\"
/>"
`;

exports[`Building Blocks Generate with optional parameters getSerializedFileContent for filter-bar building block 2`] = `
"<macros:FilterBar
    id=\\"testFilterBar\\"
    metaPath=\\"/REPLACE_WITH_ENTITY/REPLACE_WITH_A_QUALIFIER\\"
/>"
`;

exports[`Building Blocks Generate with optional parameters getSerializedFileContent for table building block 1`] = `
"<macros:Table
    id=\\"testTable\\"
    metaPath=\\"testMetaPath\\"
    contextPath=\\"testContextPath\\"
    busy=\\"true\\"
    enableAutoColumnWidth=\\"true\\"
    enableExport=\\"true\\"
    enableFullScreen=\\"true\\"
    enablePaste=\\"true\\"
    filterBar=\\"testFilterBar\\"
    header=\\"Test Header\\"
    headerVisible=\\"true\\"
    isSearchable=\\"true\\"
    personalization=\\"Column\\"
    readOnly=\\"true\\"
    type=\\"ResponsiveTable\\"
    variantManagement=\\"None\\"
/>"
`;

exports[`Building Blocks Generate with optional parameters getSerializedFileContent for table building block 2`] = `
"<macros:Table
    id=\\"testTable\\"
    metaPath=\\"/REPLACE_WITH_ENTITY/REPLACE_WITH_A_QUALIFIER\\"
/>"
`;

exports[`Building Blocks generate building block with \`sap.fe.templates\` dependency: generate-filter-bar-templates-library-only 1`] = `
Object {
  "../../../../unit/sample/building-block/webapp-prompts/webapp/ext/main/Main.view.xml": Object {
    "contents": "<mvc:View xmlns:core=\\"sap.ui.core\\" xmlns:mvc=\\"sap.ui.core.mvc\\" xmlns=\\"sap.m\\" xmlns:html=\\"http://www.w3.org/1999/xhtml\\" controllerName=\\"com.test.myApp.ext.main.Main\\" xmlns:macros=\\"sap.fe.macros\\">
    <Page title=\\"Main\\">
        <content>
            <macros:FilterBar id=\\"testFilterBar\\"/>
        </content>
    </Page>
</mvc:View>",
    "state": "modified",
  },
  "../../../../unit/sample/building-block/webapp-prompts/webapp/manifest.json": Object {
    "contents": "{
  \\"sap.app\\": {
    \\"id\\": \\"my.test.App\\"
  },
  \\"sap.ui5\\": {
    \\"dependencies\\": {
      \\"libs\\": {
        \\"sap.fe.templates\\": {},
        \\"sap.fe.macros\\": {}
      }
    }
  },
  \\"default\\": {
    \\"sap.app\\": {
      \\"id\\": \\"my.test.App\\"
    },
    \\"sap.ui5\\": {
      \\"dependencies\\": {
        \\"minUI5Version\\": \\"1.127.0\\",
        \\"libs\\": {
          \\"sap.fe.core\\": {}
        }
      }
    }
  }
}
",
    "state": "modified",
  },
}
`;

exports[`Building Blocks generate building block without dependencies: generate-filter-bar-templates-library-only 1`] = `
Object {
  "../../../../unit/sample/building-block/webapp-prompts/webapp/ext/main/Main.view.xml": Object {
    "contents": "<mvc:View xmlns:core=\\"sap.ui.core\\" xmlns:mvc=\\"sap.ui.core.mvc\\" xmlns=\\"sap.m\\" xmlns:html=\\"http://www.w3.org/1999/xhtml\\" controllerName=\\"com.test.myApp.ext.main.Main\\" xmlns:macros=\\"sap.fe.macros\\">
    <Page title=\\"Main\\">
        <content>
            <macros:FilterBar id=\\"testFilterBar\\"/>
        </content>
    </Page>
</mvc:View>",
    "state": "modified",
  },
  "../../../../unit/sample/building-block/webapp-prompts/webapp/manifest.json": Object {
    "contents": "{
  \\"sap.app\\": {
    \\"id\\": \\"my.test.App\\"
  },
  \\"sap.ui5\\": {
    \\"dependencies\\": {
      \\"libs\\": {
        \\"sap.fe.macros\\": {}
      }
    }
  },
  \\"default\\": {
    \\"sap.app\\": {
      \\"id\\": \\"my.test.App\\"
    },
    \\"sap.ui5\\": {
      \\"dependencies\\": {
        \\"minUI5Version\\": \\"1.127.0\\",
        \\"libs\\": {
          \\"sap.fe.core\\": {}
        }
      }
    }
  }
}
",
    "state": "modified",
  },
}
`;

exports[`Building Blocks generate building block, no fs 1`] = `
"<mvc:View xmlns:core=\\"sap.ui.core\\" xmlns:mvc=\\"sap.ui.core.mvc\\" xmlns=\\"sap.m\\" xmlns:html=\\"http://www.w3.org/1999/xhtml\\" controllerName=\\"com.test.myApp.ext.main.Main\\" xmlns:macros=\\"sap.fe.macros\\">
    <Page title=\\"Main\\">
        <content>
            <macros:FilterBar id=\\"testFilterBar\\"/>
        </content>
    </Page>
</mvc:View>"
`;
